update to add tag associtation
